[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/Rooms/Navigation2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/Rooms/RoomExtents.gd" type="Script" id=2]

[node name="RoomExtents" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="Navigation2D" parent="." instance=ExtResource( 1 )]

[node name="Limits" type="Node" parent="."]

[node name="TopLeft" type="Position2D" parent="Limits"]

[node name="BottomRight" type="Position2D" parent="Limits"]
